--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "m@klkvsk.ru"
         }
     ],
-    "require": {},
+    "require": {
+        "psr/log": "^1.1"
+    },
     "autoload": {
         "files" : [ "./bootstrap.php" ],
         "classmap": [ "core", "main", "meta" ]
